# AutoSailROS

./: .gitmodules  PULL_REQUEST_TEMPLATE.md  README.md
AutoSail-ST20/rotary_sensor_spi/: CMakeLists.txt
AutoSail-ST20/rotary_sensor_spi/test/: test_as5048.py  test_as5048_service.py
AutoSail-ST20/src/rotary_sensor_i2c/: package.xml
Core/Inc/: main.h  stm32h7xx_hal_conf.h
Core/Src/: main.c  stm32h7xx_hal_msp.c
ServoControl/: ServoControl.ino
autosail/: CMakeLists.txt  package.xml  setup.py
autosail/cfg/: Camera.cfg  PathPlanner.cfg  RudderController.cfg  SailController.cfg
autosail/config/: camera_config.yaml  ctrl_config.yaml  custom_rosconsole.conf  motor_controller_config.yaml  path_planner_config.yaml  stm32_config.yaml
autosail/launch/: camera.launch  ctrl.launch  drivers.launch  kalman.launch  motor_controller.launch  path_planner.launch  robot_localization.launch  rudder.launch  sail.launch  sensor.launch  sim_helper.launch  startup.launch  stm32.launch  system.launch  system_without_drivers.launch  wind_sensor.launch
autosail/msg/: stm32_msg.msg  waypoint_array_msg.msg  waypointmsg.msg
autosail/scripts/: startup.py
autosail/scripts/camera/: camera_node.py
autosail/scripts/ctrl/: rudder_node.py  sail_node.py  sail_node_wind_angle.py
autosail/scripts/drivers/: motor_controller_node.py  wind_sensor_node.py
autosail/scripts/network_throughput/: network_node.py
autosail/scripts/path_planner/: path_planner_node.py  path_planner_partner_node.py  speed_polar_diagram.py
autosail/scripts/stm32/: stm32_node.py
autosail/scripts/temperature_sbcs/: temperature_node.py
autosail/scripts/utility/: boat_tf_broadcaster.py  deg2rad.py  gps_to_ned.py  rad2deg.py  route_planner_service.py  sim_converter_node.py  true_wind_node.py
autosail/src/bluetooth_camera/: bluetooth_camera.py
autosail/src/camera/: bouydetection.py
autosail/src/ctrl/: pid.py  sail_controller_wind_angle.py
autosail/src/motor_controller/: motor_controller.py
autosail/src/network_throughput/: network_script.py
autosail/src/path_planner/: create_profile.py  path_planner.py  potential_field_algorithm.py  potential_relative_goal_obsticle.py  speed_polar_diagram_function.py
autosail/src/signalk-calypso-ultrasonic/: package-lock.json
autosail/src/signalk-calypso-ultrasonic/lib/: calypso-ultrasonic.js
autosail/src/stm32/: stm32_handle.py
autosail/src/utils/: polls.py
autosail/src/wind_sensor/: wind_sensor.py  wind_sensor_improved.py
autosail/test/: integration_test.py  probe_node.py  startup.launch  startup.py  startup.test  startup_test.py  unittest_true_wind.py
autosail/test/ctrl/: ctrl_rostest.test  integrationtest_ruddercontroller.py  libtest_rudder.py  libtest_sail.py  libtest_sail_wind_angle.py  rostest.test  unittest_ruddercontroller.py  unittest_sail_controller.py
autosail/test/motor_controller/: unittest_motor_controller.py
autosail/test/path_planner/: path_planner_rostest.test  potential_relative_goal_obsticle_test.py  speed_polar_diagram_test.py  unittest_path_planner.py  unittest_potential_field.py
autosail/test/wind_sensor/: rostest.test  unittest_wind_sensor.py  wind_sensor_rostest.test
camera/: CMakeLists.txt  package.xml  setup.py
camera/launch/: node.launch
camera/msg/: camera_msg.msg
camera/scripts/: camera_node.py
camera/src/: Distance.py  bouydetection.py
camera/src/camera/: bouydetection.py
ctrl_pkg/: CMakeLists.txt  package.xml  setup.py  std_msgs.msg
ctrl_pkg/cfg/: RudderController.cfg  SailController.cfg
ctrl_pkg/config/: config.yaml
ctrl_pkg/launch/: node.launch
ctrl_pkg/scripts/: rudder_controller.py  rudder_node.py  sail_controller.py  sail_node.py  sail_node_pid.py
ctrl_pkg/src/ctrl/: pid.py  rudder_controller.py  sail_controller.py
ctrl_pkg/test/: rostest.test  unittest_sailcontroller.py
ctrl_pkg/tests/: integrationtest_ruddercontroller.py  libtest_sail.py  rostest.test  test.launch  unittest.py  unittest_rudder_controller.py  unittest_sailcontroller.py
dir-B/: .gitignore
dir-B/battery_voltage_indicator/: CMakeLists.txt  package.xml
dir-B/battery_voltage_indicator/scripts/: battery_voltage_indicator_node.py
dir-B/rotary_sensor_spi/: package.xml
dir-B/rotary_sensor_spi/config/: as5048_node.yaml
dir-B/xsens_ros_mti_driver/param/: xsens_mti_node.yaml
docs/: README.md
launch/: launch.launch
motor_controller/: CMakeLists.txt  package.xml  setup.py
motor_controller/config/: config.yaml
motor_controller/launch/: node.launch
motor_controller/scripts/: motor_controller_node.py
motor_controller/src/motor_controller/: motor_controller.py
motor_controller/test/: unittest_motor_controller.py
path_planner/: CMakeLists.txt  package.xml  setup.py
path_planner/config/: config.yaml
path_planner/launch/: node.launch
path_planner/msg/: obstacles_array_msg.msg
path_planner/scripts/: path_planner_node.py  path_planner_partner_node.py  speed_polar_diagram_client.py
path_planner/src/: speed_polar_diagram.py
path_planner/test/: path_planner_node_test.py  potential_field_configurations.py  potential_relative_goal_obsticle_test.py  potential_relative_wind_test.py  profile_unittest.py  rostest.test  speed_polar_diagram_test.py
rotary_sensor_spi/: setup.py
rotary_sensor_spi/launch/: as5048_node.launch
rotary_sensor_spi/scripts/: as5048_node.py  service_read_diagnostics.py  service_write_zero_position.py
rotary_sensor_spi/test/: as5048.test
sim_helper/: CMakeLists.txt  package.xml
sim_helper/launch/: sim_helper.launch
sim_helper/scripts/: boat_tf_broadcaster.py  sim_converter_node.py
src/: README.md
src/rotary_sensor_i2c/: CMakeLists.txt
startup/: CMakeLists.txt  package.xml  startup.test
startup/launch/: launch.launch
startup/src/: doStuffCodeHere.py  startup_test.py
wind_sensor/: CMakeLists.txt  package.xml  setup.py
wind_sensor/devel/: .catkin  .rosinstall  _setup_util.py
wind_sensor/launch/: node.launch
wind_sensor/scripts/: wind_sensor_node.py
wind_sensor/src/: wind_sensor.py
xsens_ros_mti_driver/param/: xsens_mti_node.yaml
(+33 files in other folders)
